[gd_scene load_steps=6 format=3 uid="uid://clxlcqshxuwuh"]

[ext_resource type="Script" path="res://Menus/upgrade_menu.gd" id="1_gn374"]
[ext_resource type="Shader" uid="uid://cvniy8ewr8yt6" path="res://Menus/game_over_menu.tres" id="2_22tbn"]
[ext_resource type="Theme" uid="uid://dtdon6iqghbvu" path="res://Assets/Themes/Menu_Theme.tres" id="3_tjxc2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mqq2s"]
shader = ExtResource("2_22tbn")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0qpo3"]

[node name="UpgradeMenu" type="Control" groups=["upgrademenu"]]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gn374")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_mqq2s")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_0qpo3")

[node name="CenterContainer" type="CenterContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_tjxc2")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/CenterContainer"]
layout_mode = 2

[node name="Lbl_Scrap" type="Label" parent="TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Scrap: 1000"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Lbl_Health" type="Label" parent="TextureRect/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Increase Health by 10"

[node name="Btn_Health" type="Button" parent="TextureRect/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "100 Scrap"

[node name="HBoxContainer2" type="HBoxContainer" parent="TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Lbl_Speed" type="Label" parent="TextureRect/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Increase Speed by 1"

[node name="Btn_Speed" type="Button" parent="TextureRect/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "500 Scrap"

[node name="Btn_Back" type="Button" parent="TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/HBoxContainer/Btn_Health" to="." method="_on_btn_health_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/HBoxContainer2/Btn_Speed" to="." method="_on_btn_speed_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/Btn_Back" to="." method="_on_btn_back_pressed"]
